--- a/paper/top_perfomances.tex
+++ b/paper/top_perfomances.tex
@@ -1,24 +1,24 @@
-\begin{tabular}{lggllggllr}
+\begin{tabular}{lggllggllggllr}
 \toprule
-& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} &  \multicolumn{2}{c}{Noisy probabilistic ending} \\
+& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} &  \multicolumn{2}{g}{Noisy (\(p_n < 0.1\))} & \multicolumn{2}{c}{Probabilistic ending} & \multicolumn{2}{g}{Probabilistic ending (\(p_e < 0.1\))} &  \multicolumn{2}{c}{Noisy probabilistic ending} \\
 \midrule
-& Name & $\bar{r}$ &                 Name & $\bar{r}$ &               Name & $\bar{r}$ &                 Name & $\bar{r}$ \\
+& Name & $\bar{r}$ &                 Name & $\bar{r}$ &               Name & $\bar{r}$ &                 Name & $\bar{r}$ &                 Name & $\bar{r}$ &                 Name & $\bar{r}$ \\
 \midrule
-0  &            Evolved HMM 5 &   0.00667 &                 Grumpy &   0.14020 &          Fortress4 &   0.01266 &           Alternator &   0.30370 \\
-1  &           Evolved FSM 16 &   0.00995 &                    $e$ &   0.19388 &           Defector &   0.01429 &               $\phi$ &   0.30978 \\
-2  &     EvolvedLookerUp2 2 2 &   0.01064 &         Tit For 2 Tats &   0.20617 &  Better and Better &   0.01587 &                  $e$ &   0.31250 \\
-3  &  Evolved FSM 16 Noise 05 &   0.01667 &  Slow Tit For Two Tats &   0.20962 &    Tricky Defector &   0.01875 &                $\pi$ &   0.31686 \\
-4  &        PSO Gambler 2 2 2 &   0.02143 &           Cycle Hunter &   0.21538 &          Fortress3 &   0.02174 &    Limited Retaliate &   0.35263 \\
-5  &              Evolved ANN &   0.02878 &         Risky QLearner &   0.22222 &     Gradual Killer &   0.02532 &     Anti Tit For Tat &   0.35431 \\
-6  &            Evolved ANN 5 &   0.03390 &            Retaliate 3 &   0.22887 &         Aggravater &   0.02778 &          Retaliate 3 &   0.35563 \\
-7  &        PSO Gambler 1 1 1 &   0.03704 &          Cycler CCCCCD &   0.23507 &             Raider &   0.03077 &  Limited Retaliate 3 &   0.35563 \\
-8  &            Evolved FSM 4 &   0.04891 &            Retaliate 2 &   0.23913 &         Cycler DDC &   0.04545 &            Retaliate &   0.35714 \\
-9  &         PSO Gambler Mem1 &   0.05036 &        Defector Hunter &   0.24038 &        Hard Prober &   0.05128 &          Retaliate 2 &   0.35767 \\
-10 &                 Winner12 &   0.06011 &              Retaliate &   0.24177 &         SolutionB1 &   0.06024 &  Limited Retaliate 2 &   0.36134 \\
-11 &             Fool Me Once &   0.06140 &    Hard Tit For 2 Tats &   0.25000 &      Meta Minority &   0.06077 &             Hopeless &   0.36842 \\
-12 &                      DBS &   0.07143 &               ShortMem &   0.25286 &              Bully &   0.06081 &    Arrogant QLearner &   0.40651 \\
-13 &            DoubleCrosser &   0.07200 &    Limited Retaliate 3 &   0.25316 &    Fool Me Forever &   0.07080 &    Cautious QLearner &   0.40909 \\
-14 &              BackStabber &   0.07519 &      Limited Retaliate &   0.25706 &             EasyGo &   0.07101 &      Fool Me Forever &   0.41764 \\
+0  &            Evolved HMM 5 &     0.007 &                 Grumpy &     0.140 &                         DBS &     0.000 &          Fortress4 &     0.013 &             Evolved FSM 16 &     0.000 &           Alternator &     0.304 \\
+1  &           Evolved FSM 16 &     0.010 &                    $e$ &     0.194 &     Evolved FSM 16 Noise 05 &     0.008 &           Defector &     0.014 &    Evolved FSM 16 Noise 05 &     0.013 &              $\phi$  &     0.310 \\
+2  &     EvolvedLookerUp2 2 2 &     0.011 &         Tit For 2 Tats &     0.206 &      Evolved ANN 5 Noise 05 &     0.013 &  Better and Better &     0.016 &                       MEM2 &     0.027 &                $e$   &     0.312 \\
+3  &  Evolved FSM 16 Noise 05 &     0.017 &  Slow Tit For Two Tats &     0.210 &                 BackStabber &     0.024 &    Tricky Defector &     0.019 &              Evolved HMM 5 &     0.044 &               $\pi$  &     0.317 \\
+4  &        PSO Gambler 2 2 2 &     0.021 &           Cycle Hunter &     0.215 &               DoubleCrosser &     0.025 &          Fortress3 &     0.022 &       EvolvedLookerUp2 2 2 &     0.049 &    Limited Retaliate &     0.353 \\
+5  &              Evolved ANN &     0.029 &         Risky QLearner &     0.222 &               Evolved ANN 5 &     0.028 &     Gradual Killer &     0.025 &       Spiteful Tit For Tat &     0.060 &     Anti Tit For Tat &     0.354 \\
+6  &            Evolved ANN 5 &     0.034 &            Retaliate 3 &     0.229 &                 Evolved ANN &     0.038 &         Aggravater &     0.028 &           Nice Meta Winner &     0.068 &  Limited Retaliate 3 &     0.356 \\
+7  &        PSO Gambler 1 1 1 &     0.037 &          Cycler CCCCCD &     0.235 &        Spiteful Tit For Tat &     0.051 &             Raider &     0.031 &         NMWE Finite Memory &     0.069 &          Retaliate 3 &     0.356 \\
+8  &            Evolved FSM 4 &     0.049 &            Retaliate 2 &     0.239 &               Evolved HMM 5 &     0.051 &         Cycler DDC &     0.045 &         NMWE Deterministic &     0.070 &            Retaliate &     0.357 \\
+9  &         PSO Gambler Mem1 &     0.050 &        Defector Hunter &     0.240 &              Level Punisher &     0.052 &        Hard Prober &     0.051 &                    Grudger &     0.070 &          Retaliate 2 &     0.358 \\
+10 &                 Winner12 &     0.060 &              Retaliate &     0.242 &                   Omega TFT &     0.059 &         SolutionB1 &     0.060 &           NMWE Long Memory &     0.074 &  Limited Retaliate 2 &     0.361 \\
+11 &             Fool Me Once &     0.061 &    Hard Tit For 2 Tats &     0.250 &                Fool Me Once &     0.059 &      Meta Minority &     0.061 &  Nice Meta Winner Ensemble &     0.076 &             Hopeless &     0.368 \\
+12 &                      DBS &     0.071 &    Limited Retaliate 3 &     0.253 &  PSO Gambler 2 2 2 Noise 05 &     0.067 &              Bully &     0.061 &       EvolvedLookerUp1 1 1 &     0.077 &    Arrogant QLearner &     0.407 \\
+13 &            DoubleCrosser &     0.072 &               ShortMem &     0.253 &              Evolved FSM 16 &     0.078 &             EasyGo &     0.071 &            NMWE Memory One &     0.080 &    Cautious QLearner &     0.409 \\
+14 &              BackStabber &     0.075 &      Limited Retaliate &     0.257 &                  EugineNier &     0.080 &    Fool Me Forever &     0.071 &                   Winner12 &     0.085 &      Fool Me Forever &     0.418 \\
 \bottomrule
     \end{tabular}
     
